restructure, with separate python and shell dirs

--- a/python/base64.ipynb
+++ b/python/base64.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('.api_key') as file:\n",
+    "with open('../.api_key', encoding='utf-8') as file:\n",
     "    api_key = file.read().strip()"
    ]
   },
@@ -1316,7 +1316,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b009209e74a1892b860c06821f9ff1bcceeadd5ef2b65b9ba784a056cd6b2390"
+    "hash": "4b5cf5ab5aec3b08ecaf80fdd69b2948c83407c1aa0c6f79f100b97790b80347"
    }
   }
  },
