--- a/python/ada-002.ipynb
+++ b/python/ada-002.ipynb
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "with open('python-embeddings.json', mode='w', encoding='utf-8') as file:\n",
-    "    json.dump(lib_utils_embedding, file)"
+    "    json.dump(lib_utils_embedding, file, indent=4)"
    ]
   },
   {
