--- a/python/ada-002.ipynb
+++ b/python/ada-002.ipynb
@@ -104,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('python-embeddings.json', mode='w', encoding='utf-8') as file:\n",
+    "with open('python-embedding.json', mode='w', encoding='utf-8') as file:\n",
     "    json.dump(lib_utils_embedding, file, indent=4)"
    ]
   },
