--- a/python/several-models.ipynb
+++ b/python/several-models.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "import requests\n",
     "\n",
-    "import tokens"
+    "import keys"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = tokens.get_api_key()"
+    "api_key = keys.get_api_key()"
    ]
   },
   {
