--- a/python/ada-002.ipynb
+++ b/python/ada-002.ipynb
@@ -515,7 +515,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "embed-encode",
+   "display_name": "python-eE5z94gO",
    "language": "python",
    "name": "python3"
   },
@@ -529,12 +529,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4b5cf5ab5aec3b08ecaf80fdd69b2948c83407c1aa0c6f79f100b97790b80347"
+    "hash": "5b2a58d16238bcb4eedef241c99ff435fc9dedd495054dcbaabbe17632e3767b"
    }
   }
  },
